--- a/src/General/VentanaPrincipalEstudiante.form
+++ b/src/General/VentanaPrincipalEstudiante.form
@@ -226,6 +226,11 @@
           </Properties>
         </Component>
         <Container class="javax.swing.JPanel" name="JPanel_botones">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+          </Properties>
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
             <Property name="columns" type="int" value="0"/>
